``` feat(location): 移除高德地图API模块并重构定位组件
- 删除src/renderer/src/api/amap.js文件，移除高德地图后端代理API模块
- 重构CommonLocationPicker.vue组件，使用新的useAmapLocation组合式API
- 重构CommonMapLocationPicker.vue组件，整合定位逻辑并移除重复代码
- 更新组件样式引用路径，修复CSS导入问题
- 在配置文件中添加开发环境高德地图密钥降级方案

refactor(chat): 优化商家端聊天功能的用户ID获取逻辑

- 替换getCurrentUserId为getCurrentMerchantId以适配商家端场景
- 更新聊天消息发送逻辑，支持单聊和群聊的消息类型区分
- 增强路由参数处理，支持friendId和targetId两种跳转方式
```